--- a/src/index.css
+++ b/src/index.css
@@ -37,18 +37,21 @@ h1 {
 
 button {
   cursor: pointer;
+  flex-grow: 1;
 }
 
-
-.button-group {
+.page-content {
   display: flex;
+  flex-direction: column;
+  align-items: left;
   justify-content: center;
-  flex-direction: row;
-  gap: 10px;
+  text-align: left;
+  margin: 0 auto;
+  padding: 0;
 }
 
 .btn {
-  border-radius: 8px;
+  border-radius: 0px 0px 8px 8px;
   border: 1px solid transparent;
   padding: 15px 25px;
   font-family: inherit;
@@ -56,9 +59,11 @@ button {
   background-color: #969494;
   transition: border-color 0.25s;
 }
+
 .btn:hover {
   border-color: #646cff;
 }
+
 .btn:focus,
 .btn:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -74,53 +79,35 @@ button {
   margin: 10px;
 }
 
-.name-container {
-  display: flex;
-  flex-direction: row;
-  text-align: left;
-  justify-content: left;
-  gap: 10px;
-  padding-left: 5px;
-  background-color: #8d30eb;
-  border: 0;
-  border-radius: 4px;
-}
-
-.small-btn {
-  background-color: #8512fa;
-  border: 0;
-  border-radius: 4px;
-  width: 25px;
-  height: 25px;
-  /* margin-right: 100px; */
-  margin-left: 0px;
-}
-
-.name {
-  margin: 0;
-}
-
-.page-content {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.btn-green {
-  background-color: #13bd54;
-}
-
-.btn-red {
-  background-color: #de3737;
-}
-
 .btn-blue {
   background-color: #4fb9e3;
 }
 
-.winner-name {
-  font-size: 70px;
-  font-weight: 500;
+.btn-green {
+  background-color: #4cd964;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px;
+}
+
+.form {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.form-section {
+  display: flex;
+  flex-direction: flex-start;
+  flex-direction: column;
+  gap: 0px;
+  padding: 0;
+  margin: 0;
 }
 
 @media (prefers-color-scheme: light) {
